src/tess/tl/test/fail/test_fail_reserved_type_forward.tl
#module main
any: () -> Int
any  () { 42 }
main () { 0 }
